5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1637_2446.log
== TEST (2019-04-11 10:45:56) 
-- CODE:
num = int(input("semha: "))
a =num//100000
b =
c =
d =
e =
f =
print(a)
-- ERROR:
File "XXXX", line 3
    b =
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:46:11) 
-- CODE:
num = int(input("semha: "))
a =num//100000
#b =
#c =
#d =
#e =
#f =
print(a)
-- ERROR:
File "XXXX", line 3
    b =
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:49:03) 
-- CODE:
num = int(input("semha de seis digitos: "))
#a =num//100000
b = num/100000 
#c =
#d =
#e =
#f =
print(b)
-- OUTPUT:
0.87612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:49:41) 
-- CODE:
num = int(input("semha de seis digitos: "))
#a =num//100000
b = (num/10000)%10 
#c =
#d =
#e =
#f =
print(b)
-- OUTPUT:
8.7612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:50:01) 
-- CODE:
num = int(input("semha de seis digitos: "))
#a =num//100000
b = (num//10000)%10 
#c =
#d =
#e =
#f =
print(b)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:50:58) 
-- CODE:
num = int(input("semha de seis digitos: "))
#a =num//100000
b = ((num/10000)*10)//10
#c =
#d =
#e =
#f =
print(b)
-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:51:30) 
-- CODE:
num = int(input("semha de seis digitos: "))
#a =num//100000
b = (((num/10000)*10)//10)%10
#c =
#d =
#e =
#f =
print(b)
-- OUTPUT:
8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:53:09) 
-- CODE:
num = int(input("semha de seis digitos: "))
#a =num//100000
#b = (((num/10000)*10)//10)%10
c = (((num/1000)*10)//10)%100
#d =
#e =
#f =
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(b)
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:53:18) 
-- CODE:
num = int(input("semha de seis digitos: "))
#a =num//100000
#b = (((num/10000)*10)//10)%10
c = (((num/1000)*10)//10)%100
#d =
#e =
#f =
print(c)
-- OUTPUT:
87.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:53:38) 
-- CODE:
num = int(input("semha de seis digitos: "))
#a =num//100000
#b = (((num/10000)*10)//10)%10
c = (((num/1000)*10)//10)%1000
#d =
#e =
#f =
print(c)
-- OUTPUT:
87.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:53:49) 
-- CODE:
num = int(input("semha de seis digitos: "))
#a =num//100000
#b = (((num/10000)*10)//10)%10
c = (((num/1000)*10)//10)%10
#d =
#e =
#f =
print(c)
-- OUTPUT:
7.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:54:45) 
-- CODE:
num = int(input("semha de seis digitos: "))
#a =num//100000
#b = (((num/10000)*10)//10)%10
#c = (((num/1000)*10)//10)%10
d = (((num/100)*10)//10)%10
#e =
#f =
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(c)
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:54:53) 
-- CODE:
num = int(input("semha de seis digitos: "))
#a =num//100000
#b = (((num/10000)*10)//10)%10
#c = (((num/1000)*10)//10)%10
d = (((num/100)*10)//10)%10
#e =
#f =
print(d)
-- OUTPUT:
6.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:55:50) 
-- CODE:
num = int(input("semha de seis digitos: "))
#a =num//100000
#b = (((num/10000)*10)//10)%10
#c = (((num/1000)*10)//10)%10
#d = (((num/100)*10)//10)%10
e = (((num//10)*10)//10)%10
#f =
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:55:56) 
-- CODE:
num = int(input("semha de seis digitos: "))
#a =num//100000
#b = (((num/10000)*10)//10)%10
#c = (((num/1000)*10)//10)%10
#d = (((num/100)*10)//10)%10
e = (((num//10)*10)//10)%10
#f =
print(e)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:56:45) 
-- CODE:
num = int(input("semha de seis digitos: "))
#a =num//100000
#b = (((num/10000)*10)//10)%10
#c = (((num/1000)*10)//10)%10
#d = (((num/100)*10)//10)%10
#e = (((num//10)*10)//10)%10
f = num%10
print(f)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:58:54) 
-- CODE:
num = int(input("semha de seis digitos: "))
a =num//100000
b = (((num/10000)*10)//10)%10
c = (((num/1000)*10)//10)%10
d = (((num/100)*10)//10)%10
e = (((num//10)*10)//10)%10
f = num%10
if(a+c+e == b+d+f):
	print("acesso liberado")
else:	
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 10:59:03) 
-- CODE:
num = int(input("semha de seis digitos: "))
a =num//100000
b = (((num/10000)*10)//10)%10
c = (((num/1000)*10)//10)%10
d = (((num/100)*10)//10)%10
e = (((num//10)*10)//10)%10
f = num%10
if(a+c+e == b+d+f):
	print("acesso liberado")
else:	
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:01:26) 
-- CODE:
num = int(input("semha de seis digitos: "))
a =num//100000
b = (((num/10000)*10)//10)%10
c = (((num/1000)*10)//10)%10
d = (((num/100)*10)//10)%10
e = (((num//10)*10)//10)%10
f = num%10
if(b + d + f  == a+ c + e ):
	print("acesso liberado")
else:	
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:06:41) 
-- CODE:
num = int(input("semha de seis digitos: "))
a =num//100000
b = (((num/10000)*10)//10)%10
c = (((num/1000)*10)//10)%10
d = (((num/100)*10)//10)%10
e = (((num//10)*10)//10)%10
f = num%10
x = b + d + f
y = a + c + e

if(x%y  == 0 ):
	print("acesso liberado")
else:	
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:06:49) 
-- CODE:
num = int(input("semha de seis digitos: "))
a =num//100000
b = (((num/10000)*10)//10)%10
c = (((num/1000)*10)//10)%10
d = (((num/100)*10)//10)%10
e = (((num//10)*10)//10)%10
f = num%10
x = b + d + f
y = a + c + e

if(x%y  == 0 ):
	print("acesso liberado")
else:	
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:06:59) 
-- CODE:
num = int(input("semha de seis digitos: "))
a =num//100000
b = (((num/10000)*10)//10)%10
c = (((num/1000)*10)//10)%10
d = (((num/100)*10)//10)%10
e = (((num//10)*10)//10)%10
f = num%10
x = b + d + f
y = a + c + e

if(x%y  == 0 ):
	print("acesso liberado")
else:	
	print("senha invalida")
-- EXECUTION TIME:
0.176363
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
